<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp">
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/all_notes_will_be_deleted"
		android:textSize="@dimen/dialog_text_size"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/are_you_sure"
		android:textSize="@dimen/dialog_text_size"
		app:layout_constraintEnd_toEndOf="@+id/textView"
		app:layout_constraintStart_toStartOf="@+id/textView"
		app:layout_constraintTop_toBottomOf="@+id/textView" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/dialog_delete_all_confirm_yes"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/yes"
		app:layout_constraintEnd_toStartOf="@+id/dialog_delete_all_confirm_no"
		app:layout_constraintStart_toStartOf="@+id/textView"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/dialog_delete_all_confirm_no"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/no"
		app:layout_constraintEnd_toEndOf="@+id/textView"
		app:layout_constraintStart_toEndOf="@+id/dialog_delete_all_confirm_yes"
		app:layout_constraintTop_toTopOf="@+id/dialog_delete_all_confirm_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>